--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "sonarlint.pathToCompileCommands": "${workspaceFolder}\\test\\build\\compile_commands.json",
     "files.associations": {
         "*.m": "matlab",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "ostream": "cpp",
+        "ios": "cpp"
     }
 }
